--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "requires": true,
-  "lockfileVersion": 1,
-  "dependencies": {
-    "connect": "^3.7.0",
-    "serve-static": "^1.14.1"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
   "name": "web-music-player",
   "version": "1.0.0",
-  "main": "script.js",
-  "devDependencies": {},
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/supernovalx/web-music-player.git"
@@ -22,5 +17,8 @@
     "url": "https://github.com/supernovalx/web-music-player/issues"
   },
   "homepage": "https://github.com/supernovalx/web-music-player#readme",
-  "description": ""
+  "dependencies": {
+    "connect": "^3.7.0",
+    "serve-static": "^1.14.1"
+  }
 }
